--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Ghostgram is the easiest and safest way to find out who unfollowed you on Instagram — 100% offline, private, and secure.">
-  <meta name="keywords" content="Ghostgram, Instagram unfollowers, who unfollowed me, track unfollowers, Instagram followers analyzer, private Instagram tools">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Ghostgram helps you find out who doesn’t follow you back on Instagram — private, offline, and easy to use.">
+  <meta name="keywords" content="Ghostgram, Instagram unfollowers, private followers tracker, no login, offline Instagram tool">
   <meta name="author" content="Ghostgram Team">
-  <meta property="og:title" content="Ghostgram - See Who Unfollowed You on Instagram">
-  <meta property="og:description" content="Track unfollowers privately. No login. 100% offline.">
-  <meta property="og:image" content="https://yourdomain.com/assets/ghostgram-preview.png">
-  <meta property="og:url" content="https://yourusername.github.io/ghostgram">
+  <meta property="og:title" content="Ghostgram - Private Instagram Followers Tracker">
+  <meta property="og:description" content="Track your Instagram unfollowers, mutuals, and fans privately and offline. No login needed.">
+  <meta property="og:image" content="https://yourcustomdomain.com/assets/ghostgram-preview.png">
+  <meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ghostgram.app">
   <meta name="twitter:card" content="summary_large_image">
-  <title>Ghostgram - Track Unfollowers on Instagram</title>
+  <title>Ghostgram - Offline Instagram Followers Tracker</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
   <style>
     body {
@@ -71,36 +72,46 @@
       padding: 15px;
       border-radius: 8px;
     }
+    a:link, a:visited {
+      color: white;
+    }
   </style>
 </head>
 <body>
   <header>
     <h1>Ghostgram</h1>
-    <p>The easiest way to track who unfollowed you on Instagram. 100% offline. No login. No risks.</p>
+    <p>Track who’s not following you back on Instagram — 100% offline and private. No login. No risk.</p>
     <div class="cta-buttons">
-      <a href="https://play.google.com/store/apps/details?id=com.yourcompany.ghostgram" target="_blank">Download Now</a>
+      <a href="https://play.google.com/store/apps/details?id=com.ghostgram.app" target="_blank">Download on Google Play</a>
       <a href="#how">How It Works</a>
     </div>
-  </header>  <section class="features">
-    <h2>Why Ghostgram?</h2>
+  </header>
+
+  <section class="features">
+    <h2>Key Features</h2>
     <ul>
-      <li>Works fully offline — load your Instagram ZIP and you're done</li>
-      <li>No login required — we don’t store or access your data</li>
-      <li>View unfollowers, fans, mutuals, and export lists</li>
-      <li>Safe for everyone — no API or data sharing involved</li>
-      <li>Fun design, ghost-themed interface and shareable CSVs</li>
+      <li>See who’s not following you back</li>
+      <li>Find mutual followers and fans</li>
+      <li>Compare snapshots to detect unfollowers over time</li>
+      <li>Track visited profiles and starred users</li>
+      <li>Export all data to CSV files</li>
+      <li>Completely offline — your data never leaves your phone</li>
     </ul>
-  </section>  <section id="how" class="features">
+  </section>
+
+  <section id="how" class="features">
     <h2>How It Works</h2>
     <ul>
-      <li>Download your Instagram data ZIP from the app</li>
-      <li>Open Ghostgram and upload the ZIP</li>
-      <li>See who follows you, who doesn’t, and who unfollowed</li>
-      <li>Export and share the list as CSV</li>
+      <li>Request your Instagram data export (followers & following only)</li>
+      <li>Download the ZIP file and open Ghostgram</li>
+      <li>Upload the ZIP — no login required</li>
+      <li>View stats, compare snapshots, export your data</li>
     </ul>
-  </section>  <footer>
+  </section>
+
+  <footer>
     <p>&copy; 2025 Ghostgram. Not affiliated with Instagram or Meta Platforms, Inc.</p>
-    <p><a href="privacy.html" style="color:white;text-decoration:underline;">Privacy Policy</a></p>
+    <p><a href="privacy.html" style="text-decoration:underline;">Privacy Policy</a></p>
   </footer>
 </body>
 </html>
