--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       text-align: center;
       padding: 40px 20px;
     }
-    header img {
+    header img.logo {
       height: 80px;
       margin-bottom: 20px;
     }
@@ -38,8 +38,12 @@
     .cta-buttons {
       margin-top: 30px;
     }
+    .cta-buttons img {
+      height: 60px;
+      margin-top: 20px;
+    }
     .carousel {
-      max-width: 320px;
+      max-width: 360px;
       margin: 40px auto;
     }
     .carousel img {
@@ -75,13 +79,13 @@
 </head>
 <body>
   <header>
-    <img src="images/app_icon.png" alt="Ghostgram Icon">
+    <img class="logo" src="images/app_icon.png" alt="Ghostgram Icon" onerror="this.style.display='none'">
     <h1>Ghostgram</h1>
     <p>Track who’s not following you back on Instagram — 100% offline and private. No login. No risk.</p>
     <div class="cta-buttons">
       <a href="https://play.google.com/store/apps/details?id=com.ghostgram.app" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" 
-             alt="Get it on Google Play" style="height:60px; margin-top: 20px;">
+        <img src="https://play-lh.googleusercontent.com/RZmT9RgDqg-bxGty1sRuT68q_MUb9HT3jTPlk0BjjGbPP7hG3RJ7kPtVtMJp2aFqzg=w240-h480-rw" 
+             alt="Get it on Google Play">
       </a>
     </div>
   </header>
