--- a/index.html
+++ b/index.html
@@ -14,50 +14,55 @@
   <title>Ghostgram - Offline Instagram Followers Tracker</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
   <style>
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
       background: linear-gradient(to bottom right, #8e2de2, #4a00e0);
       color: white;
-      text-align: center;
       padding: 40px 20px;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 40px;
     }
     header img.logo {
       height: 80px;
       margin-bottom: 20px;
     }
     header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
+      font-size: 3rem;
+      margin: 0;
     }
     header p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: auto;
+      font-size: 1.25rem;
+      max-width: 700px;
+      margin: 20px auto 0 auto;
     }
     .cta-buttons {
       margin-top: 30px;
+      display: flex;
+      justify-content: center;
     }
     .cta-buttons img {
       height: 60px;
-      margin-top: 20px;
     }
     .carousel {
-      max-width: 600px;
-      margin: 40px auto;
+      max-width: 700px;
+      margin: 50px auto;
     }
     .carousel img {
       width: 100%;
-      max-height: 100vh;
-      object-fit: contain;
+      height: auto;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
     }
     .features {
       margin-top: 60px;
+      text-align: center;
     }
     .features h2 {
-      font-size: 1.8rem;
+      font-size: 2rem;
       margin-bottom: 20px;
     }
     .features ul {
@@ -71,11 +76,18 @@
       margin: 10px 0;
       padding: 15px;
       border-radius: 8px;
+      font-size: 1.1rem;
     }
     footer {
       margin-top: 60px;
       font-size: 0.9rem;
       color: #ddd;
+      text-align: center;
+    }
+    @media (max-width: 600px) {
+      header h1 { font-size: 2rem; }
+      header p { font-size: 1rem; }
+      .features h2 { font-size: 1.5rem; }
     }
   </style>
 </head>
@@ -86,7 +98,7 @@
     <p>Track who’s not following you back on Instagram — 100% offline and private. No login. No risk.</p>
     <div class="cta-buttons">
       <a href="https://play.google.com/store/apps/details?id=com.ghostgram.app" target="_blank">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" 
+        <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" 
              alt="Get it on Google Play">
       </a>
     </div>
@@ -105,7 +117,6 @@
       function rotateImage() {
         currentIndex = (currentIndex % totalImages) + 1;
         const newSrc = `images/${currentIndex}.jpg`;
-        console.log("Switching to:", newSrc);
         carouselImage.src = newSrc;
       }
 
