--- a/index.html
+++ b/index.html
@@ -50,13 +50,35 @@
     .carousel {
       max-width: 700px;
       margin: 50px auto;
+      overflow: hidden;
+      position: relative;
     }
-    .carousel img {
+    .carousel-track {
+      display: flex;
+      transition: transform 0.6s ease-in-out;
+      width: 100%;
+    }
+    .carousel-track img {
       width: 100%;
       height: auto;
+      flex-shrink: 0;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
     }
+    .carousel-button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(0, 0, 0, 0.4);
+      border: none;
+      color: white;
+      font-size: 2rem;
+      padding: 10px;
+      cursor: pointer;
+      z-index: 10;
+    }
+    .carousel-button.left { left: 10px; }
+    .carousel-button.right { right: 10px; }
     .features {
       margin-top: 60px;
       text-align: center;
@@ -105,25 +127,45 @@
   </header>
 
   <div class="carousel">
-    <img id="carousel-image" src="images/1.jpg" alt="App Screenshot">
+    <button class="carousel-button left" onclick="moveSlide(-1)">&#10094;</button>
+    <div class="carousel-track" id="carousel-track">
+      <img src="images/1.jpg" alt="Screenshot 1">
+      <img src="images/2.jpg" alt="Screenshot 2">
+      <img src="images/3.jpg" alt="Screenshot 3">
+      <img src="images/4.jpg" alt="Screenshot 4">
+      <img src="images/5.jpg" alt="Screenshot 5">
+      <img src="images/6.jpg" alt="Screenshot 6">
+      <img src="images/7.jpg" alt="Screenshot 7">
+      <img src="images/8.jpg" alt="Screenshot 8">
+      <img src="images/9.jpg" alt="Screenshot 9">
+      <img src="images/10.jpg" alt="Screenshot 10">
+      <img src="images/11.jpg" alt="Screenshot 11">
+      <img src="images/12.jpg" alt="Screenshot 12">
+      <img src="images/13.jpg" alt="Screenshot 13">
+      <img src="images/14.jpg" alt="Screenshot 14">
+      <img src="images/15.jpg" alt="Screenshot 15">
+      <img src="images/16.jpg" alt="Screenshot 16">
+    </div>
+    <button class="carousel-button right" onclick="moveSlide(1)">&#10095;</button>
   </div>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      let currentIndex = 1;
-      const totalImages = 16;
-      const carouselImage = document.getElementById("carousel-image");
+    let currentIndex = 0;
+    const totalImages = 16;
+    const track = document.getElementById("carousel-track");
 
-      function rotateImage() {
-        currentIndex = (currentIndex % totalImages) + 1;
-        const newSrc = `images/${currentIndex}.jpg`;
-        carouselImage.src = newSrc;
-      }
+    function updateSlide() {
+      track.style.transform = `translateX(-${currentIndex * 100}%)`;
+    }
 
-      if (carouselImage) {
-        setInterval(rotateImage, 3000);
-      }
-    });
+    function moveSlide(step) {
+      currentIndex = (currentIndex + step + totalImages) % totalImages;
+      updateSlide();
+    }
+
+    setInterval(() => {
+      moveSlide(1);
+    }, 3000);
   </script>
 
   <section class="features">
