--- a/index.html
+++ b/index.html
@@ -1,198 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Ghostgram helps you find out who doesn’t follow you back on Instagram — private, offline, and easy to use.">
-  <meta name="keywords" content="Ghostgram, Instagram unfollowers, private followers tracker, no login, offline Instagram tool">
-  <meta name="author" content="Ghostgram Team">
-  <meta property="og:title" content="Ghostgram - Private Instagram Followers Tracker">
-  <meta property="og:description" content="Track your Instagram unfollowers, mutuals, and fans privately and offline. No login needed.">
-  <meta property="og:image" content="images/app_icon.png">
-  <meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ghostgram.app">
-  <meta name="twitter:card" content="summary_large_image">
-  <title>Ghostgram - Offline Instagram Followers Tracker</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
-  <style>
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(to bottom right, #8e2de2, #4a00e0);
-      color: white;
-      padding: 40px 20px;
-    }
-    header {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-    header img.logo {
-      height: 80px;
-      margin-bottom: 20px;
-    }
-    header h1 {
-      font-size: 3rem;
-      margin: 0;
-    }
-    header p {
-      font-size: 1.25rem;
-      max-width: 700px;
-      margin: 20px auto 0 auto;
-    }
-    .cta-buttons {
-      margin-top: 30px;
-      display: flex;
-      justify-content: center;
-    }
-    .cta-buttons img {
-      height: 60px;
-    }
-    .carousel {
-      max-width: 1000px;
-      margin: 50px auto;
-      overflow: hidden;
-      position: relative;
-    }
-    .carousel-track {
-      display: flex;
-      transition: transform 0.6s ease-in-out;
-      width: 1600%;
-    }
-    .carousel-track img {
-      width: 250px;
-      height: auto;
-      margin-right: 10px;
-      flex-shrink: 0;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-    }
-    .carousel-button {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      background: rgba(0, 0, 0, 0.4);
-      border: none;
-      color: white;
-      font-size: 2rem;
-      padding: 10px;
-      cursor: pointer;
-      z-index: 10;
-    }
-    .carousel-button.left { left: 10px; }
-    .carousel-button.right { right: 10px; }
-    .features {
-      margin-top: 60px;
-      text-align: center;
-    }
-    .features h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
-    .features ul {
-      list-style: none;
-      padding: 0;
-      max-width: 800px;
-      margin: auto;
-    }
-    .features li {
-      background: rgba(255, 255, 255, 0.1);
-      margin: 10px 0;
-      padding: 15px;
-      border-radius: 8px;
-      font-size: 1.1rem;
-    }
-    footer {
-      margin-top: 60px;
-      font-size: 0.9rem;
-      color: #ddd;
-      text-align: center;
-    }
-    @media (max-width: 600px) {
-      header h1 { font-size: 2rem; }
-      header p { font-size: 1rem; }
-      .features h2 { font-size: 1.5rem; }
-      .carousel-track img {
-        width: 200px;
-      }
-    }
-  </style>
-</head>
-<body>
-<header>
-  <img class="logo" src="images/app_icon.png" alt="Ghostgram Icon" onerror="this.style.display='none'">
-  <h1>Ghostgram</h1>
-  <p>Track who’s not following you back on Instagram — 100% offline and private. No login. No risk.</p>
-  <div class="cta-buttons">
-    <a href="https://play.google.com/store/apps/details?id=com.ghostgram.app" target="_blank">
-      <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" 
-           alt="Get it on Google Play">
-    </a>
-  </div>
-</header>
-<div class="carousel">
-  <button class="carousel-button left" onclick="moveSlide(-1)">&#10094;</button>
-  <div class="carousel-track" id="carousel-track">
-    <img src="images/1.jpg" alt="Screenshot 1">
-    <img src="images/2.jpg" alt="Screenshot 2">
-    <img src="images/3.jpg" alt="Screenshot 3">
-    <img src="images/4.jpg" alt="Screenshot 4">
-    <img src="images/5.jpg" alt="Screenshot 5">
-    <img src="images/6.jpg" alt="Screenshot 6">
-    <img src="images/7.jpg" alt="Screenshot 7">
-    <img src="images/8.jpg" alt="Screenshot 8">
-    <img src="images/9.jpg" alt="Screenshot 9">
-    <img src="images/10.jpg" alt="Screenshot 10">
-    <img src="images/11.jpg" alt="Screenshot 11">
-    <img src="images/12.jpg" alt="Screenshot 12">
-    <img src="images/13.jpg" alt="Screenshot 13">
-    <img src="images/14.jpg" alt="Screenshot 14">
-    <img src="images/15.jpg" alt="Screenshot 15">
-    <img src="images/16.jpg" alt="Screenshot 16">
-  </div>
-  <button class="carousel-button right" onclick="moveSlide(1)">&#10095;</button>
-</div>
-<script>
-  let currentIndex = 0;
-  const totalImages = 16;
-  const track = document.getElementById("carousel-track");
-  const slideWidth = 260; // 250px image + 10px margin
+<!-- ADD inside <head> -->
+<link rel="canonical" href="https://ghostgramlabs.github.io/ghostgram/">
+<meta name="robots" content="index, follow">
+<link rel="icon" href="images/app_icon.png" type="image/png">
 
-  function updateSlide() {
-    track.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
-  }
+<!-- Update Open Graph Image to absolute URL -->
+<meta property="og:image" content="https://ghostgramlabs.github.io/ghostgram/images/app_icon.png">
+<meta property="og:type" content="website">
 
-  function moveSlide(step) {
-    currentIndex = (currentIndex + step + totalImages) % totalImages;
-    updateSlide();
-  }
-
-  setInterval(() => {
-    moveSlide(1);
-  }, 3000);
+<!-- JSON-LD Structured Data -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MobileApplication",
+  "name": "Ghostgram",
+  "operatingSystem": "ANDROID",
+  "applicationCategory": "SocialNetworkingApplication",
+  "description": "Track Instagram unfollowers offline. No login, no ads. 100% privacy.",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "ratingCount": "100"
+  },
+  "author": {
+    "@type": "Organization",
+    "name": "Ghostgram Team",
+    "url": "https://ghostgramlabs.github.io/ghostgram/"
+  },
+  "url": "https://play.google.com/store/apps/details?id=com.ghostgram.app"
+}
 </script>
-<section class="features">
-  <h2>Key Features</h2>
-  <ul>
-    <li>See who’s not following you back</li>
-    <li>Find mutual followers and fans</li>
-    <li>Compare snapshots to detect unfollowers over time</li>
-    <li>Track visited profiles and starred users</li>
-    <li>Export all data to CSV files</li>
-    <li>Completely offline — your data never leaves your phone</li>
-  </ul>
-</section>
-<section class="features">
-  <h2>How It Works</h2>
-  <ul>
-    <li>Request your Instagram data export (followers & following only)</li>
-    <li>Download the ZIP file and open Ghostgram</li>
-    <li>Upload the ZIP — no login required</li>
-    <li>View stats, compare snapshots, export your data</li>
-  </ul>
-</section>
-<footer>
-  <p>&copy; 2025 Ghostgram. Not affiliated with Instagram or Meta Platforms, Inc.</p>
-  <p><a href="privacy.html" style="text-decoration:underline; color:white;">Privacy Policy</a></p>
-</footer>
-</body>
-</html>
