--- a/index.html
+++ b/index.html
@@ -80,6 +80,110 @@
     ]
   }
   </script>
+  <style>
+  * { box-sizing: border-box; }
+  body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    background: linear-gradient(to bottom right, #8e2de2, #4a00e0);
+    color: white;
+    padding: 40px 20px;
+  }
+  header {
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  header img.logo {
+    height: 80px;
+    margin-bottom: 20px;
+  }
+  header h1 {
+    font-size: 3rem;
+    margin: 0;
+  }
+  header p {
+    font-size: 1.25rem;
+    max-width: 700px;
+    margin: 20px auto 0 auto;
+  }
+  .cta-buttons {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+  }
+  .cta-buttons img {
+    height: 60px;
+  }
+  .carousel {
+    max-width: 1000px;
+    margin: 50px auto;
+    overflow: hidden;
+    position: relative;
+  }
+  .carousel-track {
+    display: flex;
+    transition: transform 0.6s ease-in-out;
+    width: 1600%;
+  }
+  .carousel-track img {
+    width: 250px;
+    height: auto;
+    margin-right: 10px;
+    flex-shrink: 0;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+  }
+  .carousel-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.4);
+    border: none;
+    color: white;
+    font-size: 2rem;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 10;
+  }
+  .carousel-button.left { left: 10px; }
+  .carousel-button.right { right: 10px; }
+  .features {
+    margin-top: 60px;
+    text-align: center;
+  }
+  .features h2 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  .features ul {
+    list-style: none;
+    padding: 0;
+    max-width: 800px;
+    margin: auto;
+  }
+  .features li {
+    background: rgba(255, 255, 255, 0.1);
+    margin: 10px 0;
+    padding: 15px;
+    border-radius: 8px;
+    font-size: 1.1rem;
+  }
+  footer {
+    margin-top: 60px;
+    font-size: 0.9rem;
+    color: #ddd;
+    text-align: center;
+  }
+  @media (max-width: 600px) {
+    header h1 { font-size: 2rem; }
+    header p { font-size: 1rem; }
+    .features h2 { font-size: 1.5rem; }
+    .carousel-track img {
+      width: 200px;
+    }
+  }
+</style>
+
 
   <!-- Favicon -->
   <link rel="icon" href="images/app_icon.png" type="image/png">
