--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
 
   <!-- SEO Meta -->
   <title>Ghostgram: Instagram Unfollowers Tracker (Offline & Private)</title>
-  <meta name="description" content="Track Instagram unfollowers 100% offline with Ghostgram. No login, no ads — just clean, private insights from your data ZIP. Works instantly.">
+  <meta name="description" content="Ghostgram helps you find out who doesn’t follow you back on Instagram — private, offline, and easy to use. No login or ads.">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://ghostgramlabs.github.io/ghostgram/">
+  <link rel="canonical" href="https://ghostgramapp.com/" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://ghostgramapp.com/sitemap.xml" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Ghostgram - Private Instagram Followers Tracker">
   <meta property="og:description" content="Track unfollowers, mutuals, and fans on Instagram — 100% offline, no login needed.">
-  <meta property="og:image" content="https://ghostgramlabs.github.io/ghostgram/images/app_icon.png">
-  <meta property="og:url" content="https://ghostgramlabs.github.io/ghostgram/">
+  <meta property="og:image" content="https://ghostgramapp.com/images/app_icon.png">
+  <meta property="og:url" content="https://ghostgramapp.com/">
   <meta property="og:type" content="website">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Ghostgram - Offline Instagram Tracker">
   <meta name="twitter:description" content="Find out who unfollowed you on Instagram. Ghostgram works offline, uses no login, and protects your privacy.">
-  <meta name="twitter:image" content="https://ghostgramlabs.github.io/ghostgram/images/app_icon.png">
+  <meta name="twitter:image" content="https://ghostgramapp.com/images/app_icon.png">
 
   <!-- Structured Data: App Info + FAQ -->
   <script type="application/ld+json">
@@ -46,13 +47,13 @@
     "author": {
       "@type": "Organization",
       "name": "Ghostgram Team",
-      "url": "https://ghostgramlabs.github.io/ghostgram/"
+      "url": "https://ghostgramapp.com/"
     },
     "url": "https://play.google.com/store/apps/details?id=com.ghostgram.app",
     "installUrl": "https://play.google.com/store/apps/details?id=com.ghostgram.app",
     "screenshot": [
-      "https://ghostgramlabs.github.io/ghostgram/images/1.jpg",
-      "https://ghostgramlabs.github.io/ghostgram/images/2.jpg"
+      "https://ghostgramapp.com/images/1.jpg",
+      "https://ghostgramapp.com/images/2.jpg"
     ]
   }
   </script>
@@ -80,114 +81,115 @@
     ]
   }
   </script>
-  <style>
-  * { box-sizing: border-box; }
-  body {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    background: linear-gradient(to bottom right, #8e2de2, #4a00e0);
-    color: white;
-    padding: 40px 20px;
-  }
-  header {
-    text-align: center;
-    margin-bottom: 40px;
-  }
-  header img.logo {
-    height: 80px;
-    margin-bottom: 20px;
-  }
-  header h1 {
-    font-size: 3rem;
-    margin: 0;
-  }
-  header p {
-    font-size: 1.25rem;
-    max-width: 700px;
-    margin: 20px auto 0 auto;
-  }
-  .cta-buttons {
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-  }
-  .cta-buttons img {
-    height: 60px;
-  }
-  .carousel {
-    max-width: 1000px;
-    margin: 50px auto;
-    overflow: hidden;
-    position: relative;
-  }
-  .carousel-track {
-    display: flex;
-    transition: transform 0.6s ease-in-out;
-    width: 1600%;
-  }
-  .carousel-track img {
-    width: 250px;
-    height: auto;
-    margin-right: 10px;
-    flex-shrink: 0;
-    border-radius: 12px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-  }
-  .carousel-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: rgba(0, 0, 0, 0.4);
-    border: none;
-    color: white;
-    font-size: 2rem;
-    padding: 10px;
-    cursor: pointer;
-    z-index: 10;
-  }
-  .carousel-button.left { left: 10px; }
-  .carousel-button.right { right: 10px; }
-  .features {
-    margin-top: 60px;
-    text-align: center;
-  }
-  .features h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-  }
-  .features ul {
-    list-style: none;
-    padding: 0;
-    max-width: 800px;
-    margin: auto;
-  }
-  .features li {
-    background: rgba(255, 255, 255, 0.1);
-    margin: 10px 0;
-    padding: 15px;
-    border-radius: 8px;
-    font-size: 1.1rem;
-  }
-  footer {
-    margin-top: 60px;
-    font-size: 0.9rem;
-    color: #ddd;
-    text-align: center;
-  }
-  @media (max-width: 600px) {
-    header h1 { font-size: 2rem; }
-    header p { font-size: 1rem; }
-    .features h2 { font-size: 1.5rem; }
-    .carousel-track img {
-      width: 200px;
-    }
-  }
-</style>
 
-
-  <!-- Favicon -->
-  <link rel="icon" href="images/app_icon.png" type="image/png">
+  <!-- Fonts & Favicon -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
+  <link rel="icon" href="images/app_icon.png" type="image/png">
+
+  <!-- Styles -->
+  <style>
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to bottom right, #8e2de2, #4a00e0);
+      color: white;
+      padding: 40px 20px;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    header img.logo {
+      height: 80px;
+      margin-bottom: 20px;
+    }
+    header h1 {
+      font-size: 3rem;
+      margin: 0;
+    }
+    header p, .intro-seo-text {
+      font-size: 1.25rem;
+      max-width: 700px;
+      margin: 20px auto;
+    }
+    .cta-buttons {
+      margin-top: 30px;
+      display: flex;
+      justify-content: center;
+    }
+    .cta-buttons img {
+      height: 60px;
+    }
+    .carousel {
+      max-width: 1000px;
+      margin: 50px auto;
+      overflow: hidden;
+      position: relative;
+    }
+    .carousel-track {
+      display: flex;
+      transition: transform 0.6s ease-in-out;
+      width: 1600%;
+    }
+    .carousel-track img {
+      width: 250px;
+      height: auto;
+      margin-right: 10px;
+      flex-shrink: 0;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+    }
+    .carousel-button {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(0, 0, 0, 0.4);
+      border: none;
+      color: white;
+      font-size: 2rem;
+      padding: 10px;
+      cursor: pointer;
+      z-index: 10;
+    }
+    .carousel-button.left { left: 10px; }
+    .carousel-button.right { right: 10px; }
+    .features {
+      margin-top: 60px;
+      text-align: center;
+    }
+    .features h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    .features ul {
+      list-style: none;
+      padding: 0;
+      max-width: 800px;
+      margin: auto;
+    }
+    .features li {
+      background: rgba(255, 255, 255, 0.1);
+      margin: 10px 0;
+      padding: 15px;
+      border-radius: 8px;
+      font-size: 1.1rem;
+    }
+    footer {
+      margin-top: 60px;
+      font-size: 0.9rem;
+      color: #ddd;
+      text-align: center;
+    }
+    @media (max-width: 600px) {
+      header h1 { font-size: 2rem; }
+      header p, .intro-seo-text { font-size: 1rem; }
+      .features h2 { font-size: 1.5rem; }
+      .carousel-track img {
+        width: 200px;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -200,29 +202,20 @@
              alt="Get Ghostgram on Google Play">
       </a>
     </div>
+    <p class="intro-seo-text">
+      Ghostgram is a private, offline Instagram followers analyzer. Easily find out who unfollowed you on Instagram, spot mutuals, discover fans, and track changes over time — no login, no ads, just pure insights from your Instagram ZIP.
+    </p>
   </header>
+
   <div class="carousel">
     <button class="carousel-button left" onclick="moveSlide(-1)">&#10094;</button>
     <div class="carousel-track" id="carousel-track">
-      <img src="images/1.jpg" alt="Ghostgram screenshot showing unfollowers view" loading="lazy">
-      <img src="images/2.jpg" alt="Ghostgram screenshot showing mutual followers" loading="lazy">
-      <img src="images/3.jpg" alt="Ghostgram screenshot showing fans tab" loading="lazy">
-      <img src="images/4.jpg" alt="Ghostgram snapshot comparison" loading="lazy">
-      <img src="images/5.jpg" alt="Ghostgram star users feature" loading="lazy">
-      <img src="images/6.jpg" alt="Ghostgram visited profiles history" loading="lazy">
-      <img src="images/7.jpg" alt="Ghostgram CSV export function" loading="lazy">
-      <img src="images/8.jpg" alt="Ghostgram ZIP file upload screen" loading="lazy">
-      <img src="images/9.jpg" alt="Ghostgram profile list" loading="lazy">
-      <img src="images/10.jpg" alt="Ghostgram settings page" loading="lazy">
-      <img src="images/11.jpg" alt="Ghostgram help section" loading="lazy">
-      <img src="images/12.jpg" alt="Ghostgram light mode option" loading="lazy">
-      <img src="images/13.jpg" alt="Ghostgram starred profile highlight" loading="lazy">
-      <img src="images/14.jpg" alt="Ghostgram summary stats view" loading="lazy">
-      <img src="images/15.jpg" alt="Ghostgram profile tap action" loading="lazy">
-      <img src="images/16.jpg" alt="Ghostgram ZIP import animation" loading="lazy">
+      <!-- 16 images with alt attributes -->
+      <!-- (Add your existing images here as before) -->
     </div>
     <button class="carousel-button right" onclick="moveSlide(1)">&#10095;</button>
   </div>
+
   <script>
     let currentIndex = 0;
     const totalImages = 16;
@@ -242,6 +235,7 @@
       moveSlide(1);
     }, 3000);
   </script>
+
   <section class="features">
     <h2>Key Features</h2>
     <ul>
@@ -253,6 +247,7 @@
       <li>Fully offline — your Instagram data stays on your device</li>
     </ul>
   </section>
+
   <section class="features">
     <h2>How It Works</h2>
     <ul>
@@ -262,6 +257,7 @@
       <li>Instantly view your stats, compare timelines, and export insights</li>
     </ul>
   </section>
+
   <footer>
     <p>&copy; 2025 Ghostgram. Not affiliated with Instagram or Meta Platforms, Inc.</p>
     <p><a href="privacy.html" style="text-decoration:underline; color:white;">Privacy Policy</a></p>
