--- a/index.html
+++ b/index.html
@@ -211,6 +211,23 @@
     <button class="carousel-button left" onclick="moveSlide(-1)">&#10094;</button>
     <div class="carousel-track" id="carousel-track">
       <!-- 16 images with alt attributes -->
+      <img src="images/1.jpg" alt="Ghostgram screenshot showing unfollowers view" loading="lazy">
+<img src="images/2.jpg" alt="Ghostgram screenshot showing mutual followers" loading="lazy">
+<img src="images/3.jpg" alt="Ghostgram screenshot showing fans tab" loading="lazy">
+<img src="images/4.jpg" alt="Ghostgram snapshot comparison" loading="lazy">
+<img src="images/5.jpg" alt="Ghostgram star users feature" loading="lazy">
+<img src="images/6.jpg" alt="Ghostgram visited profiles history" loading="lazy">
+<img src="images/7.jpg" alt="Ghostgram CSV export function" loading="lazy">
+<img src="images/8.jpg" alt="Ghostgram ZIP file upload screen" loading="lazy">
+<img src="images/9.jpg" alt="Ghostgram profile list" loading="lazy">
+<img src="images/10.jpg" alt="Ghostgram settings page" loading="lazy">
+<img src="images/11.jpg" alt="Ghostgram help section" loading="lazy">
+<img src="images/12.jpg" alt="Ghostgram light mode option" loading="lazy">
+<img src="images/13.jpg" alt="Ghostgram starred profile highlight" loading="lazy">
+<img src="images/14.jpg" alt="Ghostgram summary stats view" loading="lazy">
+<img src="images/15.jpg" alt="Ghostgram profile tap action" loading="lazy">
+<img src="images/16.jpg" alt="Ghostgram ZIP import animation" loading="lazy">
+
       <!-- (Add your existing images here as before) -->
     </div>
     <button class="carousel-button right" onclick="moveSlide(1)">&#10095;</button>
